# gp

./: CHANGELOG.md  README.md  default.nix  gp.cabal  pkgs.nix
.plan.nix/: gp.nix
app/: Main.hs
src/: Gp.hs
