cabal-version: 2.2
name:
  gp
version:
  0.1
synopsis:
  openconnect convenience wrapper for globalprotect protocol
description:
  openconnect convenience wrapper for globalprotect protocol
homepage:
  https://github.com/chessai/gp
bug-reports:
  https://github.com/chessai/gp/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Utility,Network
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

executable gp
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , base >= 4.11 && < 4.14
    , containers >= 0.5.9 && < 0.7
    , dhall >= 1.26 && < 1.27
    , directory >= 1.3 && < 1.4
    , ip >= 1.4 && < 1.7
    , optparse-applicative >= 0.14 && < 0.16
    , process >= 1.6 && < 1.7
    , unix >= 2.6 && < 2.8
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/gp.git
